Added: styling classes, pagination, table, avatar, font icons. Slightly adjusted the look and feel of playground.

--- a/css/agiletoolkit-custom.css
+++ b/css/agiletoolkit-custom.css
@@ -5,7 +5,7 @@ section>h2:first-child{border-bottom:1px solid #ecf0f1;color:#c0cdd1;font-weight
 section+section{margin-top:6.472rem}
 strong{font-weight:500}
 #atk-header{background:#2c3e50;color:#fff;font-weight:300;padding:.809rem 1.618rem;text-align:center}
-#atk-nav{background:#ecf0f1;border-right:1px solid #cfd9db;padding-top:3.236rem;padding-bottom:3.236rem}#atk-nav ul{margin:0}
+#atk-nav{background:#fff;border-right:1px solid #f5f7f7;padding-top:3.236rem;padding-bottom:3.236rem}#atk-nav ul{margin:0}
 #atk-content{background:#fff;padding:3.236rem}
 #atk-footer{background:#ecf0f1;border-top:1px solid #cfd9db;padding:1.618rem}
-.example{background:none;border:1px solid #ecf0f1}
+.example{background:#f8f9fa;border:1px solid #ecf0f1}
