--- a/css/agiletoolkit.css
+++ b/css/agiletoolkit.css
@@ -1,3 +1,4 @@
+@import 'fontello.css';
 article,aside,details,figcaption,figure,footer,header,hgroup,nav,section,summary{display:block}
 audio,canvas,video{display:inline-block}
 audio:not([controls]){display:none;height:0}
@@ -77,51 +78,45 @@ html,body{height:100%;}
 .atk-layout{-webkit-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box;display:table;height:100%;width:100%}.atk-layout>.atk-layout-row{display:table-row;height:1px}.atk-layout>.atk-layout-row.fluid{height:auto}
 .atk-layout>.atk-layout-column{display:table-cell;min-width:1px;vertical-align:top}.atk-layout>.atk-layout-column.fluid{width:auto}
 body>.atk-layout{table-layout:fixed;}
-html{font-family:"Helvetica Neue","Helvetica","sans-serif";font-size:87.5%;line-height:1.618}
-body{color:#000;font-size:1em}
+html{font-family:"Helvetica Neue","Helvetica","sans-serif";font-size:100%;line-height:1.618}
+body{color:#000;font-size:.875rem}
 h1,h2,h3,h4,h5,h6{font-family:"Helvetica Neue","Helvetica","sans-serif";font-weight:500;line-height:1;text-rendering:optimizeLegibility;margin:2.427rem 0 .809rem 0}h1:first-child,h2:first-child,h3:first-child,h4:first-child,h5:first-child,h6:first-child{margin-top:0}
 h1+.atk-form,h2+.atk-form,h3+.atk-form,h4+.atk-form,h5+.atk-form,h6+.atk-form{margin-top:1.618rem}
-.peta{font-size:4.236em}
-.tera{font-size:3.046em}
-h1,.giga{font-size:2.618em}
-h2,.mega{font-size:1.883em}
-h3,.kilo{font-size:1.618em}
-h4,.hecto{font-size:1.164em}
-h5,.deca{font-size:1em}
-h6,small,.deci{font-size:.719em}
+.peta{font-size:3.7064999999999997rem}
+.tera{font-size:2.66525rem}
+h1,.giga{font-size:2.29075rem}
+h2,.mega{font-size:1.6476250000000001rem}
+h3,.kilo{font-size:1.41575rem}
+h4,.hecto{font-size:1.0185rem}
+h5,.deca{font-size:.875rem}
+h6,small,.deci{font-size:.6291249999999999rem}
 figure img{display:block;height:auto;width:100%}
 figcaption{color:#f00;font-size:small;font-style:italic}
 ul,ol,dl{margin:0 0 1.618 0}
 ul.clean,ol.clean{margin-left:0;padding-left:0;list-style-type:none}ul.clean ul,ol.clean ul,ul.clean ol,ol.clean ol{list-style-type:none;padding-left:1em}
 p{margin:0 0 1.618rem 0}
-blockquote{font-size:1.618em;font-style:italic;font-weight:300;margin:0 1.618rem 1.618rem}
-mark{background:#00f;color:#f00;line-height:1em}
+blockquote{font-size:1.41575rem;font-style:italic;font-weight:300;margin:0 1.618rem 1.618rem}
+mark{background:#00f;color:#f00;line-height:.875rem}
 del{color:#f00}
-code,kbd,pre,samp{border-top:1px dotted #bfbfbf;border-bottom:1px dotted #bfbfbf;cursor:text;line-height:1em;margin:0 0 1.618rem;padding:1.618rem}
-pre{-webkit-background-clip:border-box;-webkit-background-origin:padding-box;-webkit-background-size:auto;-webkit-transition-delay:0;-webkit-transition-duration:.1s;-webkit-transition-property:all;-webkit-transition-timing-function:ease-in;background-attachment:scroll;background-clip:border-box;background-color:rgba(0,0,0,0);background-image:none;background-origin:padding-box;background-size:auto;border-bottom-color:#bfbfbf;border-bottom-style:dotted;border-bottom-width:1px;border-image-outset:0;border-image-repeat:stretch;border-image-slice:100%;border-image-source:none;border-image-width:1;border-left-color:#222;border-left-style:none;border-left-width:0;border-right-color:#222;border-right-style:none;border-right-width:0;border-top-color:#bfbfbf;border-top-style:dotted;border-top-width:1px;box-sizing:border-box;color:#222;cursor:default;display:block;font-family:monospace,serif;font-size:1em;font-style:normal;font-variant:normal;font-weight:normal;line-height:30px;margin-bottom:24px;margin-top:0;outline-color:#222;outline-style:none;outline-width:0;padding:1.618rem;position:relative;transition-delay:0;transition-duration:.1s;transition-property:all;transition-timing-function:ease-in;vertical-align:baseline;white-space:pre-wrap;word-wrap:break-word}
+code,kbd,pre,samp{border-top:1px dotted #bfbfbf;border-bottom:1px dotted #bfbfbf;cursor:text;line-height:.875rem;margin:0 0 1.618rem;padding:1.618rem}
+pre{-webkit-background-clip:border-box;-webkit-background-origin:padding-box;-webkit-background-size:auto;-webkit-transition-delay:0;-webkit-transition-duration:.1s;-webkit-transition-property:all;-webkit-transition-timing-function:ease-in;background-attachment:scroll;background-clip:border-box;background-color:rgba(0,0,0,0);background-image:none;background-origin:padding-box;background-size:auto;border-bottom-color:#bfbfbf;border-bottom-style:dotted;border-bottom-width:1px;border-image-outset:0;border-image-repeat:stretch;border-image-slice:100%;border-image-source:none;border-image-width:1;border-left-color:#222;border-left-style:none;border-left-width:0;border-right-color:#222;border-right-style:none;border-right-width:0;border-top-color:#bfbfbf;border-top-style:dotted;border-top-width:1px;box-sizing:border-box;color:#222;cursor:default;display:block;font-family:monospace,serif;font-size:.875rem;font-style:normal;font-variant:normal;font-weight:normal;line-height:30px;margin-bottom:24px;margin-top:0;outline-color:#222;outline-style:none;outline-width:0;padding:1.618rem;position:relative;transition-delay:0;transition-duration:.1s;transition-property:all;transition-timing-function:ease-in;vertical-align:baseline;white-space:pre-wrap;word-wrap:break-word}
 code{background-origin:padding-box;background-size:auto;border-bottom-color:#444;border-bottom-style:none;border-bottom-width:0;border-image-outset:0;border-image-repeat:stretch;border-image-slice:100%;border-image-source:none;border-image-width:1;border-left-color:#444;border-left-style:none;border-left-width:0;border-right-color:#444;border-right-style:none;border-right-width:0;border-top-color:#444;border-top-style:none;border-top-width:0;box-sizing:border-box;color:#444;cursor:default;display:inline;height:auto;line-height:24px;margin-bottom:0;margin-left:0;margin-right:0;margin-top:0;outline-color:#444;outline-style:none;outline-width:0;padding-bottom:0;padding-left:0;padding-right:0;padding-top:0;tab-size:3;transition-delay:0;transition-duration:.1s;transition-property:all;transition-timing-function:ease-in;vertical-align:baseline;white-space:pre-wrap;width:auto}
 ins,small{line-height:1.618}
 kbd,samp{line-height:1.618}
 hr{background:#a9a9a9;border:none;margin:1.618rem 0;width:100%;height:1px;clear:both}hr.small{margin:.809rem 0}
-table{margin-bottom:1.4em;width:100%;border:1px solid #f00}
-thead{text-align:left;font-weight:bold}
-tbody tr:nth-child(even) td{background:#00f}
-tfoot{font-style:italic}tfoot td,tfoot th{padding:.75em 10px}
-th,td,caption{border:1px solid #f00}
-td,th{padding:0 10px 0 10px;line-height:1.45em}
-caption{border-bottom:0;padding:.75em 10px;line-height:1.45em;text-align:left;font-style:italic}
+.atk-table table{width:100%}.atk-table table th,.atk-table table td{background:#fff;border:1px solid #eee;text-align:left;padding:.4045rem .809rem}
 label{font-weight:bold;padding:.4045rem 0;margin-top:1px}
 input[type="text"],input[type="url"],input[type="email"],input[type="password"],input[type="search"],input[type="number"],input[type="date"],input[type="month"],input[type="week"],input[type="time"],input[type="datetime"],input[type="datetime-local"],input[type="tel"],textarea{background:#fff;border:1px solid #ccc;font-size:1em;line-height:1.618;padding:.4045rem}
 textarea{min-height:5.663rem}
 input[type=radio],input[type=checkbox]{line-height:1.618}
-button,input[type=button],input[type=submit]{-webkit-border-radius:3px;-moz-border-radius:3px;border-radius:3px;background:#666;border:1px solid #4d4d4d;color:#fff;font-size:1em;line-height:1.618;padding:.4045rem .809rem}
+button,input[type=button],input[type=submit]{-webkit-border-radius:3px;-moz-border-radius:3px;border-radius:3px;background:#666;border:1px solid #4d4d4d;color:#fff;font-size:.875rem;line-height:1.618;padding:.4045rem .809rem}
 input[type=file],select{margin:.809rem 0 .809rem 0}
 button::-moz-focus-inner,input[type="button"]::-moz-focus-inner,input[type="submit"]::-moz-focus-inner,input[type="reset"]::-moz-focus-inner{padding:0 !important;border:0 !important}
 input[readonly],div.atk-form-field-readonly{background:#e6e6e6}
 input[type=text]:focus,input[type=password]:focus,textarea:focus{border-color:#0af;-webkit-box-shadow:0 0 3px rgba(0,170,255,0.7),0 0 10px rgba(0,170,255,0.30000000000000004);-moz-box-shadow:0 0 3px rgba(0,170,255,0.7),0 0 10px rgba(0,170,255,0.30000000000000004);box-shadow:0 0 3px rgba(0,170,255,0.7),0 0 10px rgba(0,170,255,0.30000000000000004);outline:none}
 fieldset{border:none;margin:0;padding:0}
 .atk-form{margin-bottom:1.618rem}.atk-form .atk-form-row+.atk-form-row{margin-top:1.618rem}
-.atk-form fieldset legend{border:0;border-bottom:1px solid #e5e5e5;color:#333;padding:0;margin:0 0 .809rem 0;width:100%;display:block;font-size:1.618em}
+.atk-form fieldset legend{border:0;border-bottom:1px solid #e5e5e5;color:#333;padding:0;margin:0 0 .809rem 0;width:100%;display:block;font-size:1.41575rem}
 .atk-form fieldset .atk-form-row{*zoom:1}.atk-form fieldset .atk-form-row:before,.atk-form fieldset .atk-form-row:after{display:table;content:"";line-height:0}
 .atk-form fieldset .atk-form-row:after{clear:both}
 .atk-form fieldset .atk-form-row>label{width:7rem;float:left}
@@ -170,12 +165,14 @@ fieldset{border:none;margin:0;padding:0}
 .atk-box{-webkit-border-radius:3px;-moz-border-radius:3px;border-radius:3px;background:#d3d3d3;padding:1.618rem;margin-bottom:1.618rem}.atk-box>h1:first-child,.atk-box>h2:first-child,.atk-box>h3:first-child,.atk-box>h4:first-child,.atk-box>h5:first-child,.atk-box>h6:first-child{margin-top:0}
 .atk-label{-webkit-border-radius:3px;-moz-border-radius:3px;border-radius:3px;font-weight:bold;padding:.2em .4em}
 .atk-buttons .ui-button+*,.atk-buttons button+*{margin-left:.5393333333333333rem}
+.atk-avatar{display:inline-block}
 .atk-flex{display:table}.atk-flex>div{display:table-cell;vertical-align:top;-webkit-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box}
 .atk-wrapper{width:99.5%;margin-left:auto;margin-right:auto;*zoom:1}.atk-wrapper:before,.atk-wrapper:after{display:table;content:"";line-height:0}
 .atk-wrapper:after{clear:both}
-.atk-paginator a,.atk-paginator span{font-size:.9em;text-decoration:none;padding:.5em 1em;margin:0;display:inline-block}
-.atk-paginator a.disabled{color:#999;cursor:default}
-.atk-paginator a:hover{color:}
+.atk-pagination{font-size:0;line-height:0}.atk-pagination>a{background:#fff;border:1px solid #eee;font-size:.875rem;padding:.4045rem .809rem}.atk-pagination>a *[class*=icon]{position:relative;right:-0.4045rem;margin-left:-0.809rem}
+.atk-pagination>a:first-child{-webkit-border-radius:3px 0 0 3px;-moz-border-radius:3px 0 0 3px;border-radius:3px 0 0 3px}
+.atk-pagination>a:last-child{-webkit-border-radius:0 3px 3px 0;-moz-border-radius:0 3px 3px 0;border-radius:0 3px 3px 0}
+.atk-pagination>a+a{border-left-width:0}
 .atk-growl{font-weight:bold;position:fixed;top:3.236rem;right:3.236rem;z-index:9999;opacity:.8;filter:alpha(opacity=80)}.atk-growl>div{width:180px;margin-top:1.618rem;position:relative}.atk-growl>div:first-child{margin-top:0}
 .atk-growl>div .ui-icon-closethick{opacity:0;filter:alpha(opacity=0);-webkit-transition:opacity .2s;-moz-transition:opacity .2s;-ms-transition:opacity .2s;-o-transition:opacity .2s;transition:opacity .2s}
 .atk-growl>div:hover .ui-icon-closethick{opacity:1;filter:alpha(opacity=100)}
@@ -183,23 +180,23 @@ fieldset{border:none;margin:0;padding:0}
 .atk-notification>a.ui-icon-closethick{position:absolute;top:.5em;right:.5em}
 .atk-notification{-webkit-box-shadow:0 10px 20px #fff inset;-moz-box-shadow:0 10px 20px #fff inset;box-shadow:0 10px 20px #fff inset}
 .atk-growl>.atk-notification{-webkit-box-shadow:0 5px 10px rgba(0,0,0,0.4),0 10px 20px #fff inset;-moz-box-shadow:0 5px 10px rgba(0,0,0,0.4),0 10px 20px #fff inset;box-shadow:0 5px 10px rgba(0,0,0,0.4),0 10px 20px #fff inset}
-.ui-dialog.atk-dialog-minimal{background:none;border:none;box-shadow:0 0 100px rgba(0,0,0,0.25)}.ui-dialog.atk-dialog-minimal .ui-dialog-titlebar.ui-widget-header{font-size:1.618em;background:#fff;border:none;border-radius:0;color:#000;font-weight:300;margin:0;padding:1.618rem 1.618rem 0 1.618rem}.ui-dialog.atk-dialog-minimal .ui-dialog-titlebar.ui-widget-header .ui-dialog-titlebar-close{display:none}
+.ui-dialog.atk-dialog-minimal{background:none;border:none;box-shadow:0 0 100px rgba(0,0,0,0.25)}.ui-dialog.atk-dialog-minimal .ui-dialog-titlebar.ui-widget-header{font-size:1.41575rem;background:#fff;border:none;border-radius:0;color:#000;font-weight:300;margin:0;padding:1.618rem 1.618rem 0 1.618rem}.ui-dialog.atk-dialog-minimal .ui-dialog-titlebar.ui-widget-header .ui-dialog-titlebar-close{display:none}
 .ui-dialog.atk-dialog-minimal .ui-dialog-content.ui-widget-content{background:#fff;padding:.809rem 1.618rem 1.618rem 1.618rem}.ui-dialog.atk-dialog-minimal .ui-dialog-content.ui-widget-content p{margin-bottom:1.0786666666666667rem}
 .ui-dialog.atk-dialog-minimal .ui-dialog-content.ui-widget-content .atk-form fieldset{margin:0}
 .ui-dialog.atk-dialog-minimal .ui-dialog-content.ui-widget-content .atk-form .atk-form-row label{display:none}
-.ui-dialog.atk-dialog-minimal .ui-dialog-content.ui-widget-content .atk-form .atk-form-row .atk-form-field input{font-size:1em;background:#808080;border-color:#000;padding:.809rem;-webkit-transition:.3s;-moz-transition:.3s;-ms-transition:.3s;-o-transition:.3s;transition:.3s}.ui-dialog.atk-dialog-minimal .ui-dialog-content.ui-widget-content .atk-form .atk-form-row .atk-form-field input::-webkit-input-placeholder{color:#f00}
+.ui-dialog.atk-dialog-minimal .ui-dialog-content.ui-widget-content .atk-form .atk-form-row .atk-form-field input{font-size:.875rem;background:#808080;border-color:#000;padding:.809rem;-webkit-transition:.3s;-moz-transition:.3s;-ms-transition:.3s;-o-transition:.3s;transition:.3s}.ui-dialog.atk-dialog-minimal .ui-dialog-content.ui-widget-content .atk-form .atk-form-row .atk-form-field input::-webkit-input-placeholder{color:#f00}
 .ui-dialog.atk-dialog-minimal .ui-dialog-content.ui-widget-content .atk-form .atk-form-row .atk-form-field input:-moz-placeholder{color:#f00}
 .ui-dialog.atk-dialog-minimal .ui-dialog-content.ui-widget-content .atk-form .atk-form-row .atk-form-field input::-moz-placeholder{color:#f00}
 .ui-dialog.atk-dialog-minimal .ui-dialog-content.ui-widget-content .atk-form .atk-form-row .atk-form-field input:-ms-input-placeholder{color:#f00}
 .ui-dialog.atk-dialog-minimal .ui-dialog-content.ui-widget-content .atk-form .atk-form-row .atk-form-field input:focus{background:#fff}
 .ui-dialog.atk-dialog-minimal .ui-dialog-content.ui-widget-content .atk-form .atk-form-row+.atk-form-row{margin-top:0}
 .ui-dialog.atk-dialog-minimal .ui-dialog-content.ui-widget-content .atk-form .atk-buttons{display:none}
-.ui-dialog.atk-dialog-minimal .ui-dialog-buttonpane{border-color:#000;margin:0;padding:0}.ui-dialog.atk-dialog-minimal .ui-dialog-buttonpane .ui-dialog-buttonset{display:-moz-box;display:-webkit-box;display:-ms-flexbox;display:box;float:none;width:100%}.ui-dialog.atk-dialog-minimal .ui-dialog-buttonpane .ui-dialog-buttonset .ui-button{-moz-box-flex:1;-webkit-box-flex:1;-ms-flex:1;box-flex:1;font-size:1em;background:none;border:none;border-radius:0;color:#f00;display:block;font-weight:300;line-height:1;margin:0;padding:1em 0;text-shadow:none}.ui-dialog.atk-dialog-minimal .ui-dialog-buttonpane .ui-dialog-buttonset .ui-button:hover{background:#888}
+.ui-dialog.atk-dialog-minimal .ui-dialog-buttonpane{border-color:#000;margin:0;padding:0}.ui-dialog.atk-dialog-minimal .ui-dialog-buttonpane .ui-dialog-buttonset{display:-moz-box;display:-webkit-box;display:-ms-flexbox;display:box;float:none;width:100%}.ui-dialog.atk-dialog-minimal .ui-dialog-buttonpane .ui-dialog-buttonset .ui-button{-moz-box-flex:1;-webkit-box-flex:1;-ms-flex:1;box-flex:1;font-size:.875rem;background:none;border:none;border-radius:0;color:#f00;display:block;font-weight:300;line-height:1;margin:0;padding:1em 0;text-shadow:none}.ui-dialog.atk-dialog-minimal .ui-dialog-buttonpane .ui-dialog-buttonset .ui-button:hover{background:#888}
 .ui-dialog.atk-dialog-minimal .ui-dialog-buttonpane .ui-dialog-buttonset .ui-button+.ui-button{border-left:1px solid #000}
 .atk-media-block{display:table}.atk-media-block .atk-media,.atk-media-block .atk-content{display:table-cell;vertical-align:top}
 .atk-media-block .atk-media+.atk-content{padding-left:1.618rem}
-.atk-media-block .atk-content{width:100%}
 .atk-media-block.center .atk-media,.atk-media-block.center .atk-content{vertical-align:middle}
+.atk-table .atk-media-block .atk-media+.atk-content{padding-left:.809rem}
 .atk-menu,.atk-menu li,.atk-menu li,.atk-menu li li{margin:0;padding:0;list-style-type:none}
 .atk-menu.bar>li{margin-left:1px}.atk-menu.bar>li a{display:block;padding:.809rem 1.618rem}
 .atk-menu.bar>li:first-child a{-webkit-border-radius:3px 0 0 3px;-moz-border-radius:3px 0 0 3px;border-radius:3px 0 0 3px;margin:0}
@@ -212,6 +209,12 @@ img::selection{background:transparent}
 img::-moz-selection{background:transparent}
 body{-webkit-tap-highlight-color:#008000}
 a{color:#0053b3;text-decoration:none}a:hover,a:focus{color:#f00}
+.atk-jackscrew{width:100%}
+.atk-left{text-align:left}
+.atk-right{text-align:right}
+.atk-center{text-align:center}
+.atk-rounded,img.atk-rounded{-webkit-border-radius:3px;-moz-border-radius:3px;border-radius:3px}
+.atk-circled,img.atk-circled{-webkit-border-radius:50%;-moz-border-radius:50%;border-radius:50%}
 *[class*=atk-color]{color:#000}*[class*=atk-color] a{color:#000}*[class*=atk-color] a:hover{color:#00f}
 *[class*=atk-color] hr{background-color:#000}
 *[class*=atk-color].atk-color-blue{background:#5ac6ff}
