--- a/less/forms.less
+++ b/less/forms.less
@@ -99,7 +99,7 @@ fieldset {
             .kilo;
         }
         .atk-form-row {
-            .clearfix();
+            .clear-fix();
             > label {
                 width: @label;
                 float: left;
@@ -281,7 +281,7 @@ fieldset {
 
 // and this is actually for layout
 .atk-row {
-    .clearfix();
+    .clear-fix();
     // +.atk-row { margin-top: @margin; }
 
     > *:first-child:not([class*="offset"]),
