--- a/less/grid-old.less
+++ b/less/grid-old.less
@@ -10,7 +10,7 @@
   width: @siteWidth;
   margin-left: auto;
   margin-right: auto;
-  .clearfix();
+  .clear-fix();
 }
 
 .columns(@columnSpan: 1) {
