--- a/less/mixins.less
+++ b/less/mixins.less
@@ -12,7 +12,7 @@
 
 // Helpers
 // --------------------------------------------------------
-.clearfix() {
+.clear-fix() {
   *zoom: 1;
   &:before,
   &:after {
@@ -25,6 +25,10 @@
   &:after {
     clear: both;
   }
+}
+.clear-font() {
+  font-size: 0;
+  line-height: 0;
 }
 .clear-ul() {
   &, li {
