--- a/less/variables.less
+++ b/less/variables.less
@@ -1,7 +1,7 @@
 // Typography
 @bodyFamily:          "Helvetica Neue", "Helvetica", @jui-ffDefault;
 @bodyColor:           #000;
-@bodySize:            1em; /* 16px */
+@bodySize:            0.875rem; /* 14px */
 @bodyBaseline:        1.618; /* 24px */
 
 @headingColor:        #000;
@@ -11,7 +11,8 @@
 // General
 @margin: 1rem * @bodyBaseline;
 
-// Colors & Effects
+// Colors
+@borderColor:     #eee;
 @colorBlue:       rgb(90, 198, 255);
 @colorPink:       rgb(255, 130, 130);
 @colorGreen:      rgb(160, 236, 111);
