--- a/css/agiletoolkit-custom.less
+++ b/css/agiletoolkit-custom.less
@@ -54,8 +54,8 @@ strong {
 	text-align: center;
 }
 #atk-nav {
-	background: @smoke;
-	border-right: 1px solid darken(@smoke, 10%);
+	background: #fff;
+	border-right: 1px solid lighten(@smoke, 3%);
 	padding-top: @margin*2;
 	padding-bottom: @margin*2;
 	ul {
@@ -75,6 +75,6 @@ strong {
 
 // Various
 .example {
-	background: none;
+	background: lighten(@smoke, 4%);
 	border: 1px solid @smoke;
 }
