--- a/less/variables.less
+++ b/less/variables.less
@@ -13,11 +13,15 @@
 
 // Colors
 @borderColor:     #eee;
+
+@colorLight:      #fff;
+@colorDark:       #000;
 @colorBlue:       rgb(90, 198, 255);
 @colorPink:       rgb(255, 130, 130);
 @colorGreen:      rgb(160, 236, 111);
 @colorYellow:     rgb(253, 235, 117);
 @colorLightGray:  rgb(241, 241, 242);
+
 @effectSuccess:   #ccffdb;
 @effectWarning:   #fcffcc;
 @effectDanger:    #ffcccc;
