--- a/less/misc.less
+++ b/less/misc.less
@@ -273,6 +273,28 @@
         }
     }
 }
+.atk-popover.ui-dialog {
+    border-color: @borderColor;
+    border-radius: @cornerRadius;
+    box-shadow: 0 5px 10px fade(@colorDark,30%);
+    >.ui-dialog-titlebar {
+        display: none;
+    }
+    >.ui-dialog-content {
+        background: #fff;
+        border-radius: @cornerRadius;
+        padding: @margin/2;
+        z-index: 2;
+    }
+    .arrow.top {
+        margin-bottom: -5px;
+        z-index: 1 !important;
+        &:after {
+            background: #fff;
+            border-color: @borderColor;
+        }
+    }
+}
 
 
 
