--- a/less/variables.less
+++ b/less/variables.less
@@ -12,7 +12,15 @@
 @margin: 1rem * @bodyBaseline;
 
 // Colors
+@linkColor:       blue;
+@linkColorHover:  red;
+
 @borderColor:     #eee;
+@borderColorDark: darken(@borderColor, 25%);
+
+@colorPrimary:    #3498db;
+@stateHover:      #eee;
+@stateActive:     yellow;
 
 @colorLight:      #fff;
 @colorDark:       #000;
